force-app/main/default/objects/Expense__c/fields/Expense_Group__c.field-meta.xml
<CustomField>
    <fullName>Expense_Group__c</fullName>
    <label>Expense Group</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>Pankaj</fullName>
            </value>
            <value>
                <fullName>Neeraj</fullName>
            </value>
            <value>
                <fullName>Sunita</fullName>
            </value>
            <value>
                <fullName>S-Presso</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>