force-app/main/default/objects/Expense__c/fields/Payment_Mode__c.field-meta.xml
<CustomField>
    <fullName>Payment_Mode__c</fullName>
    <label>Payment Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Home Cash</fullName>
            </value>
            <value>
                <fullName>Self Cash</fullName>
            </value>
            <value>
                <fullName>HDFC Credit Card</fullName>
            </value>
            <value>
                <fullName>Net Bank</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>