force-app/main/default/objects/Expense__c/fields/SNo__c.field-meta.xml
<CustomField>
    <fullName>SNo__c</fullName>
    <label>SNo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>